--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,6 +23,7 @@
                     android:name="android.support.PARENT_ACTIVITY"
                     android:value="com.example.RushHourApp.MainActivity" />
         </activity>
+        <activity android:name=".BoardActivity" android:label="BoardActivity"/>
     </application>
 
 </manifest>
