Rush hour class and cars

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,27 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.RushHourApp"
-          android:versionCode="1"
-          android:versionName="1.0">
+    package="com.example.RushHourApp"
+    android:versionCode="1"
+    android:versionName="1.0">
 
-    <uses-sdk android:minSdkVersion="18"/>
+    <uses-sdk android:minSdkVersion="18" />
 
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="MainActivity"
-                  android:label="@string/app_name">
+    <application
+        android:label="@string/app_name"
+        android:icon="@drawable/ic_launcher">
+        <activity
+            android:name="MainActivity"
+            android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity
-                android:name="com.example.RushHourApp.AboutActivity"
-                android:label="@string/about_title"
-                android:parentActivityName="com.example.RushHourApp.MainActivity" >
+            android:name="com.example.RushHourApp.AboutActivity"
+            android:label="@string/about_title"
+            android:parentActivityName="com.example.RushHourApp.MainActivity">
             <meta-data
-                    android:name="android.support.PARENT_ACTIVITY"
-                    android:value="com.example.RushHourApp.MainActivity" />
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.RushHourApp.MainActivity" />
         </activity>
     </application>
 
