--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,8 +9,10 @@
     <application
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher">
+
         <activity
             android:name="MainActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,6 +21,7 @@
         </activity>
 
         <activity
+            android:screenOrientation="portrait"
             android:name="com.example.RushHourApp.AboutActivity"
             android:label="@string/about_title"
             android:parentActivityName="com.example.RushHourApp.MainActivity">
@@ -26,8 +29,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.RushHourApp.MainActivity" />
         </activity>
-        <activity android:name=".BoardActivity" android:label="BoardActivity"/>
-        <activity android:name=".PuzzleListActivity" android:label="PuzzleList"/>
+        <activity android:name=".BoardActivity" android:screenOrientation="portrait" android:label="BoardActivity"/>
+        <activity android:name=".PuzzleListActivity" android:screenOrientation="portrait" android:label="PuzzleList"/>
     </application>
 
 </manifest>
